# One-Week-CP_Pairing

./: .gitignore  CMakeLists.txt  Participant.h  README.md  evolution_algorithm_output.txt  main.cpp  scoring_util.cpp  scoring_util.h  util.cpp  util.h  util2.cpp
fltk_data_visualization/: chart.cpp  curve.cpp
lover_data_generation/: generation_tst.jsonl  main.py  testdata_matching.jsonl
scoring_datails/: 物语情侣配对.docx
scoring_details/: pair_scoring.xlsx
